...
      return;
    }
    setPage(page + 1);
    fetchPreferences();
  };
  return (
    <View style={styles.container} testID="preferencesScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={preferencesList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
