...
  render() {
    return (
      <ScrollView style={styles.container}>
        <Text style={styles.centerText}>JHipster Entities will appear below</Text>
        <RoundedButton text="Point" onPress={pointEntityScreen} testID="pointEntityScreenButton" />
        <RoundedButton text="BloodPressure" onPress={bloodPressureEntityScreen} testID="bloodPressureEntityScreenButton" />
        <RoundedButton text="Weight" onPress={weightEntityScreen} testID="weightEntityScreenButton" />
        <RoundedButton text="Preference" onPress={preferenceEntityScreen} testID="preferenceEntityScreenButton" />
        {/* ignite-jhipster-entity-screen-needle */}
      </ScrollView>
    )
  }
}

...
