...
      return;
    }
    setPage(page + 1);
    fetchWeights();
  };
  return (
    <View style={styles.container} testID="weightScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={weightList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
